# Riddle-Runtime

./: CMakeLists.txt  README-cn.md  README.md  RiddleLexer.g4  RiddleParser.g4
scr/: ObjManager.cpp  ObjManager.h  Object.cpp  Object.h  Tools.cpp  Tools.h  main.cpp  test.cpp  toAstVisitor.cpp  toAstVisitor.h  visitor.cpp  visitor.h
scr/visitor/: toAstVisitor.cpp  toAstVisitor.h  visitor.cpp  visitor.h
test/: example.txt
语法性质表/: 对象.md
